tree-sitter-jexl3000/test/corpus/jexl.txt
============================================
Transforms
============================================

test | youpi(123, 12)

----

 (program
      (transform
        (identifier)
        (identifier)
        (arguments
          (number)
          (number))))
